--- a/webapp/resources/css/white.css
+++ b/webapp/resources/css/white.css
@@ -9,17 +9,8 @@ input[type=text] {width: 90px;}
 	position: absolute;
 }
 .mainView{
-    position: absolute;
-    left: 150px;
-    top: 70px;
-    float: left;
-}
-
-.sideMenu{
-	
-}
-.sideMenu>ul>li>ol{
-	display: none;
+	margin-left: 165px;
+	margin-top: -600px;
 }
 
 .redLine{
@@ -80,9 +71,4 @@ tr:hover{
 	width: 100%;
 	height: 100%;
 	z-index: 1;
-}
-
-.maxLeft{
-	margin-left: 100%;
-	z-index: -1;
 }
