--- a/webapp/resources/css/white.css
+++ b/webapp/resources/css/white.css
@@ -13,6 +13,7 @@ input[type=text] {font-size: 10px;}
 
 .space{width:100%; height:10px;}
 
+.right-a{float: right; font-size: 10px;}
 
 /* font */
 @font-face { font-family: 'GodoB'; src: url(../ttf/GodoB.ttf) format('truetype'); }
