--- a/webapp/resources/css/white.css
+++ b/webapp/resources/css/white.css
@@ -1,8 +1,16 @@
+/*모바일*/
+@media (max-width: 500px) {
+	span, table{font-size: 9px;}
+	input[type=text] {font-size: 9px;}	
+}
+/*피시*/
+@media screen and (min-width: 501px) {
+    span, table{font-size: 11px;}
+    input[type=text] {font-size: 10px;}  
+}
 
-span{font-size: 10px;}
-table{font-size: 9px;}
+/*공통*/
 td, th{height:38px; vertical-align: middle !important;}
-input[type=text] {font-size: 10px;}
 
 #navMenu ul {list-style:none; margin:0; padding:0;}
 #navMenu li {margin: 0 15 0 0; padding: 0 0 0 0; border : 0; float: left;}
