--- a/webapp/resources/css/white.css
+++ b/webapp/resources/css/white.css
@@ -22,9 +22,6 @@
 /*common*/
 td, th{height:38px; vertical-align: middle !important;}
 
-
-
-
 #navMenu ul {list-style:none; margin:0; padding:0;}
 #navMenu li {margin: 0 15 0 0; padding: 0 0 0 0; border : 0; float: left;}
 .article{padding-left: 20px; padding-right: 20px;}
@@ -40,28 +37,12 @@ td, th{height:38px; vertical-align: middle !important;}
 .space{width:100%;}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.2);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:9999;}
 
-
-/* icon */
-.caret-bottom-l4{background-image: url('../img/icon/caret-bottom-4x.png');}
-
 /* font */
-@font-face { font-family: 'GodoB'; src: url(../ttf/GodoB.ttf) format('truetype'); }
-.GodoB-20{font-family: 'GodoB', serif;font-size: 20px;}
-.GodoB-15{font-family: 'GodoB', serif;font-size: 15px;}
-.GodoB-10{font-family: 'GodoB', serif;font-size: 10px;}
-
 @font-face { font-family: 'NanumSquareB'; src: url(../ttf/NanumSquareB.ttf) format('truetype'); }
-.NanumSquareRoundB-20{font-family: 'NanumSquareB', serif;font-size: 20px;}
-.NanumSquareRoundB-15{font-family: 'NanumSquareB', serif;font-size: 15px;}
-.NanumSquareRoundB-10{font-family: 'NanumSquareB', serif;font-size: 10px;}
-.NanumSquareRoundB{font-family: 'NanumSquareB', serif;}
-.nsrb{font-family: 'NanumSquareB', serif;}
+.nsb{font-family: 'NanumSquareB', serif;}
 
 @font-face { font-family: 'NanumSquareRoundB'; src: url(../ttf/NanumSquareRoundB.ttf) format('truetype'); }
-.NanumSquareRoundB-20{font-family: 'NanumSquareRoundB', serif;font-size: 20px;}
-.NanumSquareRoundB-15{font-family: 'NanumSquareRoundB', serif;font-size: 15px;}
-.NanumSquareRoundB-10{font-family: 'NanumSquareRoundB', serif;font-size: 10px;}
-.NanumSquareRoundB{font-family: 'NanumSquareRoundB', serif;}
+.nsrb{font-family: 'NanumSquareRoundB', serif;}
 
 .sideView{
 	position: absolute;
