--- a/webapp/resources/css/white.css
+++ b/webapp/resources/css/white.css
@@ -6,8 +6,8 @@
 	.span-fs{font-size: 9px !important;}
 	.btn-fs{font-size: 9px !important;}
 	.btn-sm-fs{font-size: 9px !important;}
-	.chart-height{height: 200px;}
-	
+	.chart-height{height: 200px;}	
+	.purChart{width: 95%;}
 }
 /*pc*/
 @media screen and (min-width: 501px) {
@@ -18,6 +18,7 @@
 	.btn-fs{font-size: 16px !important;}
 	.btn-sm-fs{font-size: 10px !important;}
 	.chart-height{height: 500px;}
+	.purChart{width: 24%; float: left; margin-right: 5px; margin-bottom: 10px;}
 
 }
 
