--- a/webapp/resources/white/css/common.css
+++ b/webapp/resources/white/css/common.css
@@ -2,6 +2,12 @@
 /*jsGrid ¼³Á¤ */
 .jsgrid-grid-header, .jsgrid-grid-body{overflow: auto;}
 
+/* textarea code */
+.ta-code{
+	background: #363636;
+	color: #FFFFFF;	
+}
+
 /* font */
 @font-face { font-family: 'NanumSquareB'; src: url(../ttf/NanumSquareB.ttf) format('truetype'); }
 .nsb{font-family: 'NanumSquareB', serif;}
