--- a/webapp/resources/white/css/common.css
+++ b/webapp/resources/white/css/common.css
@@ -14,6 +14,7 @@
 @font-face { font-family: 'NanumSquareRoundB'; src: url(../ttf/NanumSquareRoundB.ttf) format('truetype'); }
 .nsrb{font-family: 'NanumSquareRoundB', serif;}
 
+.hide{display: none;}
 .article{padding-left: 20px; padding-right: 20px;}
 .left{float: left; margin-right: 5px; margin-bottom: 10px;}
 .right{float: right; margin-right: 5px; margin-bottom: 10px;}
