--- a/webapp/resources/cAdjust/css/cAdjust.css
+++ b/webapp/resources/cAdjust/css/cAdjust.css
@@ -1,4 +1,4 @@
-.cAdjust-blue{color:#569CF1; font-size:inherit;}
+.cAdjust-blue{color:#569CF1; font-size:inherit; font-weight: 600;}
 .cAdjust-green{color:#CE8153; font-size:inherit;}
 .cAdjust-brown{color:#CE8153; font-size:inherit;}
 	
