--- a/webapp/resources/cAdjust/css/cAdjust.css
+++ b/webapp/resources/cAdjust/css/cAdjust.css
@@ -1,4 +1,5 @@
+.line{}
 .js-directive{color:#569CF1; font-size:inherit; font-weight: 600;}
 .js-comment{color:#6BA980; font-size:inherit;}
-.js-text{color:#CE8153; font-size:inherit;}
+.js-text{color:#CE9178; font-size:inherit;}
 	
