--- a/webapp/resources/cAdjust/css/cAdjust.css
+++ b/webapp/resources/cAdjust/css/cAdjust.css
@@ -1,4 +1,6 @@
-.line{}
+.cAdjust-line{background: #3D3D3D;color: #FFFFFF; float: left; font-size: 13px; border-right: 4px solid #5D5D5D;}
+.cAdjust-textarea{background: #363636;color: #FFFFFF; font-size: 13px;}
+
 .js-directive{color:#569CF1; font-size:inherit; font-weight: 600;}
 .js-comment{color:#6BA980; font-size:inherit;}
 .js-text{color:#CE9178; font-size:inherit;}
