--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -13,13 +13,9 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .pull-left{float: left !important;}
 .pull-right{float: right !important;}
 
-.login{background-image: url("../img/login.png");}
-.logout{background-image: url("../img/logout.png");}
-
-
 /* nav */
 .nav{margin: 0 auto; max-width: 100%; min-height: 45px; background: #4C4C4C; box-shadow:0 3px 15px rgba(0,0,0,.35); font-size: 1.2em;}
-.nav .nav-brand{width: 100px; display: block; color: rgba(246, 246, 246, .9); text-decoration: none; font-weight:700; padding: 10px 10px;}
+.nav .nav-brand{width: 100px; display: block; color: rgba(246, 246, 246, .9); text-decoration: none; font-weight:700; padding: 10px 10px; text-align: center;}
 .nav .user{position: relative; right: 10px; margin-left: auto; color: rgba(246, 246, 246, .9); padding-top: 8px;}
 .nav ul {padding: 0; margin: 0; list-style: none;}
 .nav ul li{float: left; position: relative; }
