--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -35,6 +35,9 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 @-o-keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 @keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 
+/* main */
+.main{padding: 10px;}
+
 
 /* navbar */
 /* .nav{margin: 0 auto; max-width: 100%; background: #4C4C4C; box-shadow:0 3px 15px rgba(0,0,0,.15);}
