--- a/webapp/resources/jsgrid-1.5.3/css/jsgrid-theme.css
+++ b/webapp/resources/jsgrid-1.5.3/css/jsgrid-theme.css
@@ -9,8 +9,8 @@
 .jsgrid-header-row > .jsgrid-header-cell,
 .jsgrid-filter-row > .jsgrid-cell,
 .jsgrid-insert-row > .jsgrid-cell,
-.jsgrid-edit-row > .jsgrid-cell {
-    border: 1px solid #e9e9e9;
+.jsgrid-edit-row > .jsgrid-cell {   
+    border: 1px solid #363636;
 }
 
 .jsgrid-header-row > .jsgrid-header-cell {
@@ -95,7 +95,7 @@
 }
 
 .jsgrid-cell {
-    border: #f3f3f3 1px solid;
+    border: #363636 1px solid;
 }
 
 .jsgrid-grid-body .jsgrid-row:first-child .jsgrid-cell,
@@ -137,7 +137,7 @@
 
 .jsgrid-selected-row > .jsgrid-cell {
     background: #363636;
-    border-color: #c4e2ff;
+    border-color: #363636;
 }
 
 .jsgrid-nodata-row > .jsgrid-cell {
