--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -17,11 +17,17 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.3);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:8000;}
 .login{
 	position: absolute;
+	
+	top:30%;
     left: 50%;
-    width: 100px;
-    height: 100px;
+    transform:translate(-50%, -50%);
+    width: 300px;
+    height: 200px;
+	box-shadow: 0 3px 15px rgba(0,0,0,.75);
+	border-radius: 2px;
     background: #4C4C4C;
     z-index: 9000;
+    
 }
 
 /* nav */
@@ -118,7 +124,7 @@ padding:5%;
 .height-full{height: 100%;}
 
 span, table{font-size: 11px;}    
-input[type=date], input[type=time],input[type=text] {font-size: 12px;}
+/* input[type=date], input[type=time],input[type=text] {font-size: 12px;} */
 .slt-fs{font-size: 12px !important;}
 .span-fs{font-size: 16px !important;}
 .btn-fs{font-size: 16px !important;}
