--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -15,6 +15,8 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .show{display: block;}
 .hide{display: none;}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.3);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:8000;}
+
+/*login*/
 .login{position: absolute; top:30%; left:50%; transform:translate(-50%, -50%); width: 300px; height: 230px; box-shadow: 0 3px 15px rgba(0,0,0,.75); border-radius: 2px; background: #363636; z-index: 9000;}
 .login > h5{margin: 5px 0px 0px 112px;}
 .login > div{margin: 10px 0px 0px 51px;}
