--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -10,13 +10,11 @@
 
 /* defalut */
 body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
-.pull-left{float: left !important;}
-.pull-right{float: right !important;}
 .show{display: block;}
 .hide{display: none;}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.3);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:8000;}
 
-/*login*/
+/* login */
 .login{position: absolute; top:30%; left:50%; transform:translate(-50%, -50%); width: 300px; height: 230px; box-shadow: 0 3px 15px rgba(0,0,0,.75); border-radius: 2px; background: #363636; z-index: 9000;}
 .login > h5{margin: 5px 0px 0px 112px;}
 .login > div{margin: 10px 0px 0px 51px;}
@@ -24,7 +22,7 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 
 /* nav */
 .nav{margin: 0 auto; max-width: 100%; min-height: 45px; background: #4C4C4C; box-shadow:0 3px 15px rgba(0,0,0,.35); font-size: 1.2em;}
-.nav .nav-brand{width: 100px; display: block; color: rgba(246, 246, 246, .9); text-decoration: none; font-weight:700; padding: 10px 10px; text-align: center;}
+.nav .nav-brand{width: 100px; display: block; color: rgba(246, 246, 246, .9); text-decoration: none; font-weight:700; padding: 10px 10px; float:left; text-align: center;}
 .nav .user{position: relative; right: 10px; margin-left: auto; color: rgba(246, 246, 246, .9); padding-top: 8px;}
 .nav ul {padding: 0; margin: 0; list-style: none;}
 .nav ul li{float: left; position: relative; }
@@ -45,13 +43,33 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .main{padding: 10px;}
 
 /* markup */
-.input-sm{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; border-radius: 2px;}
-.input-md{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; font-size: 1.4em;}
-.input-lg{background: #4C4C4C; color:#C6C6C6; height: 40px; border: 1px solid #585858; border-radius: 2px; font-size: 2em;}
+.input-sm{background: #5E5E5E; color:#C6C6C6; height: 20px; border: 1px solid #585858; border-radius: 2px;}
+.input-md{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; font-size: 1.4em;}
 
-.btn-sm{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; border-radius: 2px;}
-.btn-md{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px;}
-.btn-lg{background: #4C4C4C; color:#C6C6C6; height: 40px; border: 1px solid #585858; border-radius: 2px;}
+
+.btn-gray{
+	background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858;
+	display: inline-block; border-radius: 2px;
+	font-weight: 400; text-align: center;
+	white-space: nowrap; vertical-align: middle; user-select: none;
+	text-transform: none; overflow: visible; margin: 0; cursor: pointer;
+	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+	font: 400 13.3333px Arial;
+	padding: .25rem .5rem;
+	
+}
+.btn-gray:hover{
+	background: #3A3A3A;
+}
+.btn-sm{
+	
+}
+/* .btn-sm{background: #4C4C4C; color:#C6C6C6; height: 20px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
+.btn-sm:hover{background: #3A3A3A;}
+.btn-md{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
+.btn-md:hover{background: #3A3A3A;}
+.btn-lg{background: #4C4C4C; color:#C6C6C6; height: 40px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
+.btn-lg:hover{background: #4C4C4C;} */
 
 
 
