--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -15,15 +15,19 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.3);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:8000;}
 
 /* login */
-.login{position: absolute; top:30%; left:50%; transform:translate(-50%, -50%); width: 300px; height: 230px; box-shadow: 0 3px 15px rgba(0,0,0,.75); border-radius: 2px; background: #363636; z-index: 9000;}
-.login > h5{margin: 5px 0px 0px 112px;}
-.login > div{margin: 10px 0px 0px 51px;}
+.login{position: absolute; top:30%; left:50%; transform:translate(-50%, -50%); width: 300px; height: 260px; box-shadow: 0 3px 15px rgba(0,0,0,.75); border-radius: 2px; background: #363636; z-index: 9000;}
+.login > h5{margin: 20px 0px 0px 112px;}
+.login > div{margin: 10px 0px 0px 0px;}
 .login > div > input{margin-bottom: 10px;}
+.login > div > div{margin: 13px 0px 0px 0px;}
+.login > div > div > button{margin: 0px 0px 0px 35px;}
 
 /* nav */
 .nav{margin: 0 auto; max-width: 100%; min-height: 45px; background: #4C4C4C; box-shadow:0 3px 15px rgba(0,0,0,.35); font-size: 1.2em;}
 .nav .nav-brand{width: 100px; display: block; color: rgba(246, 246, 246, .9); text-decoration: none; font-weight:700; padding: 10px 10px; float:left; text-align: center;}
-.nav .user{position: relative; right: 10px; margin-left: auto; color: rgba(246, 246, 246, .9); padding-top: 8px;}
+.nav .user{ float:right; right: 10px;  color: rgba(246, 246, 246, .9); padding: 8px 10px 0px 0px;}
+.nav .user a{margin:0px 8px 0px 0px;}
+.nav .user span{margin-right: 10px;}
 .nav ul {padding: 0; margin: 0; list-style: none;}
 .nav ul li{float: left; position: relative; }
 .nav ul li a {display: block; color: rgba(189, 189, 189, .9);  text-decoration: none; padding: 10px 10px; border-top: 2px solid transparent; border-bottom: 2px solid transparent; transition: all .3s ease-in-out;}
@@ -39,37 +43,51 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 @-o-keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 @keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 
+.search-bar{margin: 0px 0px 5px 0px;}
+
 /* main */
 .main{padding: 10px;}
+.center{position: relative; width: 80%; left: 10%;}
 
-/* markup */
-.input-sm{background: #5E5E5E; color:#C6C6C6; height: 20px; border: 1px solid #585858; border-radius: 2px;}
-.input-md{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; font-size: 1.4em;}
+.input-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: middle;}
+.select-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; padding: .25rem .5rem; height: 30px; vertical-align: middle;}
+.btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	font-weight: 400; text-align: center; white-space: nowrap; vertical-align: middle; user-select: none; overflow: visible; margin: 0; cursor: pointer; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; font-weight:600; padding: .25rem .5rem; height: 30px;}
+.btn-gray:hover{background: #3A3A3A;}
+.btn-gray:active{background: #5E5E5E;}
 
+/* size */
+.sm{height: 20px; font-size: 0.1em;}
+.lg{height: 40px; font-size: 1.7em;}
 
-.btn-gray{
-	background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858;
-	display: inline-block; border-radius: 2px;
-	font-weight: 400; text-align: center;
-	white-space: nowrap; vertical-align: middle; user-select: none;
-	text-transform: none; overflow: visible; margin: 0; cursor: pointer;
-	transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-	font: 400 13.3333px Arial;
-	padding: .25rem .5rem;
-	
-}
-.btn-gray:hover{
-	background: #3A3A3A;
-}
-.btn-sm{
-	
-}
+.w1{width: 100px;}
+.w2{width: 200px;}
+.w3{width: 300px;}
+.w4{width: 400px;}
+.w5{width: 500px;}
+.w50{width: 50%;}
+.w100{width: 100%;}
+
+h1, h2, h3, h4, h5, h6 {margin-top: 0; margin-bottom: 0.5rem;}
+h1, .h1 {font-size: 2.5rem;}
+h2, .h2 {font-size: 2rem;}
+h3, .h3 {font-size: 1.75rem;}
+h4, .h4 {font-size: 1.5rem;}
+h5, .h5 {font-size: 1.25rem;}
+h6, .h6 {font-size: 1rem;}
+
 /* .btn-sm{background: #4C4C4C; color:#C6C6C6; height: 20px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
 .btn-sm:hover{background: #3A3A3A;}
 .btn-md{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
 .btn-md:hover{background: #3A3A3A;}
 .btn-lg{background: #4C4C4C; color:#C6C6C6; height: 40px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
 .btn-lg:hover{background: #4C4C4C;} */
+
+.pull-right{float: right !important;}
+.pull-left{float: left !important;}
+
+
+
+
 
 
 
