--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -55,6 +55,16 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .btn-gray:hover{background: #3A3A3A;}
 .btn-gray:active{background: #5E5E5E;}
 
+.lable-gray{
+	background: #4C4C4C;
+    border: 1px solid #646464;
+    
+    height: 30px;
+    
+   /*  padding: 4px 5px 8px 5px;
+    margin: 0px 3px 0px 0px; */
+}
+
 /* size */
 .sm{height: 20px; font-size: 0.1em;}
 .lg{height: 40px; font-size: 1.7em;}
@@ -64,8 +74,9 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .w3{width: 300px;}
 .w4{width: 400px;}
 .w5{width: 500px;}
-.w50{width: 50%;}
-.w100{width: 100%;}
+.w50{osition:relative; width: 50%;}
+.w90{position:relative; width: 90%;}
+.w100{osition:relative; width: 100%;}
 
 h1, h2, h3, h4, h5, h6 {margin-top: 0; margin-bottom: 0.5rem;}
 h1, .h1 {font-size: 2.5rem;}
@@ -85,6 +96,9 @@ h6, .h6 {font-size: 1rem;}
 .pull-right{float: right !important;}
 .pull-left{float: left !important;}
 
+.flex{display: flex; align-items:center;}
+.flex .flex-left{flex: none; margin: 0 5px 0px 0px;}
+.flex .flex-right{flex: 1;}
 
 
 
