--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -10,6 +10,9 @@
 
 /* defalut */
 body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
+span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
+
+
 .show{display: block;}
 .hide{display: none;}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.3);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:8000;}
@@ -52,9 +55,12 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 
 .input-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: middle; margin-top: 1px;}
 .select-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; padding: .25rem .5rem; height: 30px; vertical-align: middle;}
-.btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	font-weight: 400; text-align: center; white-space: nowrap; vertical-align: middle; user-select: none; overflow: visible; margin: 0; cursor: pointer; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; font-weight:600; padding: .25rem .5rem; height: 30px;}
+.btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: middle; user-select: none; overflow: visible; margin: 0; cursor: pointer; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; font-weight:600; padding: .25rem .5rem; height: 30px;}
 .btn-gray:hover{background: #3A3A3A;}
 .btn-gray:active{background: #5E5E5E;}
+.textarea-gray{
+	background: #5E5E5E; color:#C6C6C6; border: 1px solid #646464;
+}
 
 .lable-gray{
 	background: #4C4C4C;
@@ -75,9 +81,9 @@ body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
 .w3{width: 300px;}
 .w4{width: 400px;}
 .w5{width: 500px;}
-.w50{osition:relative; width: 50%;}
+.w50{position:relative; width: 50%;}
 .w90{position:relative; width: 90%;}
-.w100{osition:relative; width: 100%;}
+.w100{position:relative; width: 100%;}
 
 .a-brand{
 	color: rgba(246, 246, 246, .8);
@@ -102,60 +108,10 @@ h6, .h6 {font-size: 1rem;}
 .pull-right{float: right !important;}
 .pull-left{float: left !important;}
 
-.flex{display: flex; align-items:center;}
-.flex .flex-left{flex: none; margin: 0 5px 0px 0px;}
+.flex{display: flex; align-items:center; margin-bottom: 5px;}
+.flex .flex-left{flex: none; margin: 0px 5px 0px 0px;}
 .flex .flex-right{flex: 1;}
-
-
-
-
-
-
-
-/* navbar */
-/* .nav{margin: 0 auto; max-width: 100%; background: #4C4C4C; box-shadow:0 3px 15px rgba(0,0,0,.15);}
-.nav::after {display: block; clear: both;}
-.nav ul {padding: 0; margin: 0; list-style: none;}
-.nav ul li {float: left; position: relative;}
-.nav ul li a {display: block; color: rgba(189, 189, 189, .9); text-decoration: none; padding: 1rem 1rem; border-top: 2px solid transparent; border-bottom: 2px solid transparent; transition: all .3s ease-in-out;}
-.nav ul li a:hover, nav ul li a:focus { color: white;}
-.nav ul li a:focus {color: white;}
-.nav ul li a:not(:only-child)::after {padding-left: 4px;}
-.nav ul li ul li {min-width: 190px;}
-.nav ul li ul li a {background: transparent; color: #555; border-bottom: 1px solid #DDE0E7;}
-.nav ul li ul li a:hover, nav ul li ul li a:focus {background: #eee; color: #111;}
-.nav-dropdown {display: none; position: absolute; background: #fff;	box-shadow: 0 4px 10px rgba(10, 20, 30, .2);} */
-
-/* body */
-/* body {
--moz-osx-font-smoothing:grayscale;
--ms-flex-direction:column;
--webkit-box-direction:normal;
--webkit-box-orient:vertical;
--webkit-font-smoothing:antialiased;
-background:#f5f5f5;
-color:#777;
-display:flex;
-flex-direction:column;
-font-family:Montserrat, sans-serif;
-font-size: 1em;
-font-weight:300;
-font-weight:400;
-margin:0;
-min-height:100vh;
-padding:5%;
-} */
-
-
-
-
-
-
-
-
-
-
-
+.flex .flex-other{margin: 0px 0px 0px 5px;}
 
 
 
@@ -182,7 +138,7 @@ padding:5%;
 .height-half{height: 50%;}
 .height-full{height: 100%;}
 
-span, table{font-size: 11px;}    
+/* span, table{font-size: 11px;}  */   
 /* input[type=date], input[type=time],input[type=text] {font-size: 12px;} */
 .slt-fs{font-size: 12px !important;}
 .span-fs{font-size: 16px !important;}
