--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -53,24 +53,18 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .main{padding: 10px;}
 .center{position: relative; width: 80%; left: 10%;}
 
-.input-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom;}
-.select-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; padding: .25rem .5rem; height: 30px; vertical-align: bottom; }
+.input-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
+.select-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
 .btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: bottom; user-select: none; overflow: visible; margin: 0; cursor: pointer; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; font-weight:600; padding: .25rem .5rem; height: 30px;}
 .btn-gray:hover{background: #3A3A3A;}
 .btn-gray:active{background: #5E5E5E;}
-.textarea-gray{
-	background: #5E5E5E; color:#C6C6C6; border: 1px solid #646464;
-}
+.textarea-gray{background: #5E5E5E; color:#C6C6C6; border: 1px solid #646464; height:50%; width:100%;}
 
-.lable-gray{
-	background: #4C4C4C;
-    border: 1px solid #646464;
-    
-    height: 30px;
-    
-   /*  padding: 4px 5px 8px 5px;
-    margin: 0px 3px 0px 0px; */
-}
+.span-gray{background: #363636; padding: 6px 10px 7px 10px; line-height: 30px; border-radius: 1px; border: 1px solid #585858; vertical-align: bottom;}
+.span-gray-rt{background: #363636; padding: 6px 10px 7px 10px; line-height: 30px; border-radius: 1px; border: 1px solid #585858; margin-right: -6px; vertical-align: bottom;}
+
+
+
 
 /* size */
 .sm{height: 20px; font-size: 0.1em;}
